--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="max-w-3xl mx-auto p-10 rounded-lg" style="background-color: var(--text-dark-green); color: var(--input-bg);">
                 <i class="fas fa-tshirt text-3xl mb-4" style="color: var(--input-bg);"></i>
                 <h2 class="font-garamond text-5xl mb-6" style="color: var(--input-bg);">Dress Code</h2>
-                <p class="text-lg leading-relaxed">Nuestro matrimonio será de tarde - noche, en jardín encantado, elegante el estilo, como siempre hemos soñado. Cuida tus zapatos, que el pasto es traicionero, pero la noche será mágica, eso sí es certero. Ellos, traje formal deberán lucir, ellas, vestido largo para resplandecer y brillar. La puntualidad será nuestro mejor aliado. En cuanto a colores, todo vale y es bienvenido, menos blanco o afines… pues a la novia van dirigidos.</p>
+                <p class="text-lg leading-relaxed">Nuestro matrimonio será de tarde - noche, en jardín encantado, elegante el estilo, como siempre hemos soñado. Cuida tus zapatos, que el pasto es traicionero, pero la noche será mágica, eso sí es certero. La puntualidad será nuestro mejor aliado. En cuanto a colores, todo vale y es bienvenido, menos blanco o afines… pues a la novia van dirigidos.</p>
             </div>
         </section>
 
@@ -686,5 +686,6 @@
     </script>
 </body>
 </html>
+
 
 
