--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: var(--bg-color);
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%234a5c43' fill-opacity='0.04'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-90-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-90-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-90-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-90-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0h1v5h4v1H6v4H5V6H0V5h5V0h1v5h4v1H6v4H5V6H0V5h5z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%234a5c43' fill-opacity='0.04'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-90-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm-90-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0h1v5h4v1H6v4H5V6H0V5h5V0h1v5h4v1H6v4H5V6H0V5h5z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
             color: var(--text-gray);
         }
         .font-garamond {
@@ -189,7 +189,6 @@
 </head>
 <body class="text-center">
 
-    <!-- Header Section -->
     <header id="home" class="py-24 px-6">
         <div class="reveal">
             <h1 class="font-garamond text-7xl md:text-9xl">Patricio & Carolina</h1>
@@ -205,19 +204,17 @@
     </header>
 
     <main>
-        <!-- Photo Carousel Section -->
         <section id="fotos" class="py-20 reveal">
             <div class="carousel-container">
                 <div class="carousel-slide">
                     <div class="carousel-item"><img src="https://i.imgur.com/V8W1jV6.jpeg" alt="Foto de la pareja 1"></div>
                     <div class="carousel-item"><img src="https://i.imgur.com/Yawebed.jpeg" alt="Foto de la pareja 2"></div>
                 </div>
-                <button class="carousel-btn prev">&#10094;</button>
-                <button class="carousel-btn next">&#10095;</button>
+                <button class="carousel-btn prev">❮</button>
+                <button class="carousel-btn next">❯</button>
             </div>
         </section>
 
-        <!-- Itinerary Section -->
         <section id="itinerario" class="py-20 px-6 reveal">
             <h2 class="font-garamond text-6xl mb-12">Itinerario</h2>
             <div class="timeline inline-block text-left">
@@ -227,7 +224,7 @@
                 </div>
                 <div class="timeline-item">
                     <h3 class="font-garamond text-3xl tracking-wider">CEREMONIA</h3>
-                    <p class="text-lg" style="color: var(--text-dark-green);">17:00 HRS.</p>
+                    <p class="text-lg" style="color: var(--text-dark-green);">17:30 HRS.</p>
                 </div>
                 <div class="timeline-item">
                     <h3 class="font-garamond text-3xl tracking-wider">CÓCTEL</h3>
@@ -244,7 +241,6 @@
             </div>
         </section>
 
-        <!-- Location Section -->
         <section id="ubicacion" class="py-20 px-6 bg-white reveal">
             <h2 class="font-garamond text-6xl mb-6">Ubicación</h2>
             <p class="text-xl">Viña William Cole</p>
@@ -254,7 +250,6 @@
             </div>
         </section>
         
-        <!-- Dress Code Section -->
         <section id="dresscode" class="py-20 px-6 reveal">
             <div class="max-w-3xl mx-auto p-10 rounded-lg" style="background-color: var(--text-dark-green); color: var(--input-bg);">
                 <i class="fas fa-tshirt text-3xl mb-4" style="color: var(--input-bg);"></i>
@@ -263,7 +258,6 @@
             </div>
         </section>
 
-        <!-- RSVP Section -->
         <section id="asistencia" class="py-20 px-6 reveal">
             <div class="max-w-2xl mx-auto p-10 rounded-lg" style="background-color: var(--text-dark-green); color: var(--input-bg);">
                 <h2 class="font-garamond text-5xl mb-4" style="color: var(--input-bg);">Confirma tu Asistencia</h2>
@@ -285,6 +279,10 @@
                             <option value="No">No podré asistir</option>
                         </select>
                     </div>
+                    <div class="mb-4">
+                         <label for="message" class="block mb-2">Mensaje dedicado a los novios</label>
+                        <textarea id="message" name="message" rows="3" class="form-input"></textarea>
+                    </div>
                     <div class="mb-6">
                          <label for="food" class="block mb-2">Requerimientos Alimenticios (alergias, intolerancias, etc.)</label>
                         <textarea id="food" name="food" rows="3" class="form-input"></textarea>
@@ -299,19 +297,16 @@
             </div>
         </section>
 
-        <!-- Gift List Section -->
         <section id="regalos" class="py-20 px-6 bg-white reveal">
             <i class="fas fa-gift text-3xl mb-4" style="color: var(--golden-brown);"></i>
             <h2 class="font-garamond text-6xl mb-6">Lista de Regalos</h2>
             <p class="max-w-2xl mx-auto mb-12">Su presencia es nuestro mejor regalo, pero si desean tener un detalle con nosotros, aquí les dejamos algunas ideas.</p>
 
             <div id="gift-list-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-5xl mx-auto">
-                <!-- Los regalos se cargarán aquí dinámicamente -->
                 <p>Cargando regalos...</p>
             </div>
         </section>
 
-        <!-- DJ & Music Section -->
         <section id="musica" class="py-20 px-6 reveal">
             <i class="fas fa-music text-3xl mb-4" style="color: var(--text-dark-green);"></i>
             <h2 class="font-garamond text-6xl mb-6">Sé nuestro DJ</h2>
@@ -342,7 +337,6 @@
 
     </main>
     
-    <!-- More Info Section -->
     <section id="info" class="py-20 px-6 reveal">
         <i class="fas fa-info-circle text-3xl mb-4" style="color: var(--golden-brown);"></i>
         <h2 class="font-garamond text-6xl mb-8">Más Información</h2>
@@ -352,7 +346,6 @@
         </div>
     </section>
 
-    <!-- Gift Modal -->
     <div id="gift-modal" class="modal-overlay">
         <div class="modal-content">
             <h3 class="font-garamond text-3xl mb-4">¡Gracias por tu regalo!</h3>
@@ -389,20 +382,18 @@
         </div>
     </div>
 
-    <!-- Hotels Modal -->
     <div id="hotels-modal" class="modal-overlay">
         <div class="modal-content relative">
-            <button class="absolute top-2 right-4 text-3xl font-light modal-close-btn">&times;</button>
+            <button class="absolute top-2 right-4 text-3xl font-light modal-close-btn">×</button>
             <h3 class="font-garamond text-3xl mb-4">Hoteles Cercanos</h3>
             <p>Puedes encontrar hoteles cercanos en el siguiente enlace:</p>
             <a href="https://maps.app.goo.gl/Uj6wcTWnn4vtdBJ3A" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline break-all">https://maps.app.goo.gl/Uj6wcTWnn4vtdBJ3A</a>
         </div>
     </div>
 
-    <!-- Dudas Modal -->
     <div id="dudas-modal" class="modal-overlay">
         <div class="modal-content relative">
-            <button class="absolute top-2 right-4 text-3xl font-light modal-close-btn">&times;</button>
+            <button class="absolute top-2 right-4 text-3xl font-light modal-close-btn">×</button>
             <h3 class="font-garamond text-3xl mb-4">¿Dudas?</h3>
             <p>Para cualquier consulta, no dudes en contactarnos al siguiente número: +56 9 1234 5678 (Carolina).</p>
         </div>
@@ -686,7 +677,3 @@
     </script>
 </body>
 </html>
-
-
-
-
